@startuml

title __CLIENT's Class Diagram__\n


    class Client {
    }

    class Game_Client {
    }

    class MalformedString {
    }

    class Player_Client {
    }

  Game_Client o-- Game_Client.states : estado
  Game_Client o-- Player_Client : player_client
  Game_Client o-- utils.Protocolo : protocolo
  Game_Client -- MalformedString
  Client -- Game_Client
  utils.Protocolo o-- utils.ComUtils
  Client -- Player_Client

right footer

PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
